--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,34 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Node modules (if you're using npm)
+node_modules/
+
+# IDE and editor files
+.vscode/
+.idea/
+*.sublime-*
+.DS_Store
+
+# Build and distribution files
+dist/
+build/
+*.bundle.js
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Asset files that might be large (uncomment if needed)
+# /assets/sounds/
 
 # Editor directories and files
 .vscode/*
